GH-96 detect 'park' thread state on JDK 9+
(cherry picked from commit 5e36af0992015e3397745a205ade8a2154c7ba90)